[package]
name = "dashium"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", default-features = false, features = [
    "http1",
    "tokio",
] }
cornucopia = { path = "cornucopia" }
dotenvy = "0.15.7"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
