[package]
name = "dashium"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", default-features = false, features = [
    "http1",
    "tokio",
] }
axum-extra = { version = "0.12.6", features = ["form"] }
base64 = "0.22.1"
cornucopia = { path = "cornucopia" }
dotenvy = "0.15.7"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.11.0"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
