[package]
name = "dashium"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", default-features = false, features = [
    "http1",
    "tokio",
] }
axum-extra = { version = "0.12.6", features = ["form"] }
base64 = "0.22.1"
chrono = "0.4.45"
cornucopia = { path = "cornucopia" }
dotenvy = "0.15.7"
hex = "0.4.3"
rand = "0.10.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.21.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
subtle = "2.6.1"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
